--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -602,23 +602,35 @@ By virtue of games having several dynamic systems all interlinking with each oth
 
 %**********************************************%
 \newpage
-\section{TODO: Drone-Controller Architecture}
-blabla
+\section{TODO: Translating AATC to SpatialOS}
+\subsection{Architecture}
+\subsubsection{Drones}
+\subsubsection{Controllers}
+
+\subsection{Global Layer}
+\subsubsection{No Fly Zones}
+\subsubsection{Waypoints}
+\subsubsection{World Bitmap}
+
+\subsection{Reactive Layer}
+\subsubsection{Drone Detection}
+\subsubsection{Collisions}
 
 %**********************************************%
 \newpage
-\section{TODO: Order Generation}
-blabla
+\section{TODO: London-Scale Simulation}
+\subsection{Entity Placement}
+\subsubsection{No Fly Zones}
+\subsubsection{Controllers}
+\subsubsection{Order Generator}
 
 %**********************************************%
 \newpage
-\section{TODO: London Snapshot Generation}
-blabla
+\section{TODO: Integrating Order Generation}
+\subsection{Drones}
+\subsection{}
 
-%**********************************************%
-\newpage
-\section{TODO: Scheduling Deliveries}
-blabla
+
 
 %**********************************************%
 \newpage
