--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -531,16 +531,16 @@ The ``feedback'' element of MLFQ allows tasks to be moved from one queue to anot
   \label{fig:mlfqs}
 \end{figure}
 
-\subsection{REVISIT: Time-Value Functions}
+\subsection{REVISIT: Time Value}
 Thus far, we have shown that whilst there is great scope to utilise drones for delivery of physical goods, the existing implementation of AATC only touches upon the routing aspect - how to get from point A to point B. Even in all the test cases, the drones' start and end points were hand-picked by the developers\cite{Balaji2017} to give an insight into how AATC would operate in a variety of scenarios.\\
 
 To gain greater understanding of how drones can positively impact industries, simulations need to be performed which take into account the financial aspect of their use case. For example when it comes to drone delivery networks, we want to ensure that the drones not only reach their destination quickly, but that they also get scheduled and utilised in the appropriate manner to maximise the profitability of the network.
 
-\subsubsection{Time Value of Money}
-As described by Investopedia \cite{Investopedia}, the \textit{Time Value of Money} is ``the concept that money available at the present time is worth more than the identical sum in the future due to its potential earning capacity''. This draws from the idea that investors would prefer to receive the same amount of money sooner rather than later, in order to obtain interest from the sum or reinvest it for greater growth.
+\subsubsection{Time-Value of Money}
+As described by Investopedia \cite{Investopedia}, the \textit{Time-Value of Money} is ``the concept that money available at the present time is worth more than the identical sum in the future due to its potential earning capacity''. This draws from the idea that investors would prefer to receive the same amount of money sooner rather than later, in order to obtain interest from the sum or reinvest it for greater growth.
 
-\subsubsection{Time Value of Data}
-By a similar train of thought, there is the concept of the \textit{Time Value of Data} - whereby the value to a business of some data decays over time and it is best to gain insight from it as soon as possible. This idea is often used in business intelligence, where companies may have large sets of unstructured data that need to be processed and analysed to derive value for the business. For example, a retailer would rather know what its users are interested in now rather than a month ago, so that they can tailor their sales and offers to leverage customer interest.
+\subsubsection{Time-Value of Data}
+By a similar train of thought, there is the concept of the \textit{Time-Value of Data} - whereby the value to a business of some data decays over time and it is best to gain insight from it as soon as possible. This idea is often used in business intelligence, where companies may have large sets of unstructured data that need to be processed and analysed to derive value for the business. For example, a retailer would rather know what its users are interested in now rather than a month ago, so that they can tailor their sales and offers to leverage customer interest.
 
 \newpage
 \subsection{SpatialOS}
@@ -619,39 +619,104 @@ By virtue of games having several dynamic systems all interlinking with each oth
 %**********************************************%
 \newpage
 \section{TODO: London-Scale Simulation}
+\subsection{Distributed Network Architecture}
+\subsubsection{Basic Order Generation}
+\subsubsection{Controller Regions}
+
+\subsection{London Snapshot}
+\subsubsection{No Fly Zone Representation}
+\subsubsection{Snapshot Generator}
+\subsubsection{Voronoi Split}
+
 \subsection{Entity Placement}
 \subsubsection{No Fly Zones}
 \subsubsection{Controllers}
 \subsubsection{Order Generator}
 
-%**********************************************%
-\newpage
-\section{TODO: Integrating Order Generation}
-\subsection{Drones}
-\subsection{}
-
 
 
 %**********************************************%
 \newpage
-\section{TODO: Prioritising Economic Value}
-\subsection{Time Value of Delivery}
-In order to consider how to maximise profitability, we introduce the concept of a Time Value Function (TVF). Rather than deal with the fixed pricing model of delivery fees as we see in the current day, we propose a new mechanism where the cost of the delivery is a function of the time taken to do said delivery. For example, a user may pay £5 for a delivery within 30 minutes but might be charged nothing if it takes longer than one hour.\\
+\section{TODO: Integrating Delivery Economics}
+\subsection{Improved Order Generation}
+\subsubsection{Package Type \& Weight}
+\subsubsection{Delivery Priority}
+
+\subsection{Revenue Model}
+% talk about the basic revenue model
+% show the table of package type/weight ==> delivery cost
+% < 30 mins ==> full price
+% 30-60 mins ==> 1/2 price
+% > 60 mins ==> free delivery
+
+\subsection{Operating Costs}
+\subsubsection{Energy Consumption}
+\subsubsection{Penalties}
 
 %**********************************************%
 \newpage
-\section{TODO: Large Scale Simulation of London}
-blabla
+\section{TODO: Time-Value of Delivery}
+Before considering how to maximise profitability, we introduce the concept of the \textit{Time-Value of Deliveries} (TVD). This is based on the \textit{Time-Value of Data} idea described in Section 2.8. Rather than deal with the fixed pricing model of delivery fees as we see in the current day, we propose a new mechanism where the cost of the delivery is a function of the time taken to do said delivery. This is known as a Time-Value Function (TVF). For example, a user may pay £5 for a delivery that takes less than 30 minutes but be charged nothing if it takes longer than one hour.\\
+
+\subsection{Function Representation}
+
+\subsection{Utilised Functions}
+\subsubsection{The Halvening}
+\subsubsection{Monotonic Decrease}
+\subsubsection{Wildcard}
+
+%**********************************************%
+\newpage
+\section{TODO: Optimised Scheduling}
+% mention pre-emption
+\subsection{Shortest Job First}
+\subsection{Least Lost Value}
 
 %**********************************************%
 \newpage
 \section{TODO: Evaluation}
-blabla
+\subsection{Metrics}
+\subsubsection{Logging}
+\subsubsection{Data Extraction}
+
+\subsection{Comparing Schedulers}
+% heavy load vs light load (queue size)
+% average profit per Delivery
+% total profit
+% average rejected potential
+
+\subsection{Large Scale London Simulation}
+% screenshot of Snapshot
+% large scale voronoi
+% lots of graphs/comparisons
+% describe how this system works at scale
+% architecture works at scale, still with room for improvement
 
 %**********************************************%
 \newpage
-\section{TODO: Conclusion \& Future Work}
-blabla
+\section{TODO: Future Work}
+% more scheduling types
+% switching scheduler on-the-fly
+% introducing more TVFs
+% comparing more schedulers
+% split-scheduling: half on FCFS, half on priority scheduling?
+% order generation to be more representative of real-world package distribution
+% drone refuelling
+% drones not needing to come back to hub after every delivery
+% drones making delivering more than 1 package in a round trip
+% drones picking up non-hub packages and delivering to non-hub destinations
+% inter-controller communication
+% pass request from one hub to another hub if there's spare capacity
+% more drone types
+% more package types
+% UnityClient for interactive simulation
+% improved data extraction tool
+
+%**********************************************%
+\newpage
+\section{TODO: Conclusion}
+
+
 
 %**********************************************%
 \newpage
