--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -24,6 +24,8 @@
 \usepackage{csquotes}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{tikz}
+\usetikzlibrary{ arrows.meta, positioning, quotes, shadows}
 
 \bibliography{library}
 
@@ -603,8 +605,54 @@ By virtue of games having several dynamic systems all interlinking with each oth
 %**********************************************%
 \newpage
 \section{TODO: Translating AATC to SpatialOS}
-\subsection{Architecture}
+Before even thinking about simulating orders and scheduling deliveries, there must be a backbone in place that allows drones to get from a start to end point. To this end, the pathfinding and collision avoidance capabilities of AATC (Section 2.4) will be the backbone of the simulation.
+
+\subsection{Interaction Model}
+However, AATC was designed as a simple master-slave system such that the server assumed total control over each drone in the system. To produce a scalable delivery network, modifications have to made that allows agents to be decoupled and unconstrained from the totalitarian model of AATC.
+
 \subsubsection{Drones}
+As a testament to hardware and software improvements over time, modern consumer drones are now fully capable of avoiding obstacles \cite{DJI} and navigating to GPS locations on their own \cite{DJIa}. By taking this into account we can have drones responsible for their own movement, leading to greater autonomy in the simulated delivery network, in turn enabling the system to scale up to bigger areas with vastly more drones than AATC.\\
+
+\begin{figure}[!hbpt]
+ \centering
+ \begin{tikzpicture}[
+ node distance = 2mm and 55mm,
+             > = Stealth,
+    box/.style = {rectangle, draw, thick, fill=white,
+                   text width=2cm, minimum height=3cm,
+                   align=center,  drop shadow}
+                    ]
+ \node [box](sp)                {Drone};
+ \node [box,right=of sp] (sc)   {Controller};
+ \draw [->] ([yshift=3mm] sp.east)  to ["Ping every second"] ([yshift=3mm] sc.west) ;
+ \draw [->] ([yshift=-3mm] sc.west) to ["Updated Velocity"] ([yshift=-3mm] sp.east);
+ \end{tikzpicture}
+ \caption{Drone-Controller Interaction in AATC.}
+ % \label{fig:test}
+ \end{figure}
+
+In the AATC case, drones would have to ping the server every second to request a suggested velocity for the drone. This means that the controller would have compute new velocities for every single drone it controls, every second.
+
+This is a lot of compute that can simply be offloaded to the drone such as in our proposed model, where we simply provide drones their next waypoint and let them navigate to it by themselves. The only pings to the server now would be to request a new waypoint or to retrieve an updated list of nearby static obstacles.
+
+ \begin{figure}[!hbpt]
+  \centering
+  \begin{tikzpicture}[
+  node distance = 2mm and 55mm,
+              > = Stealth,
+     box/.style = {rectangle, draw, thick, fill=white,
+                    text width=2cm, minimum height=3cm,
+                    align=center,  drop shadow}
+                     ]
+  \node [box](sp)                {Drone};
+  \node [box,right=of sp] (sc)   {Controller};
+  \draw [->] ([yshift=3mm] sp.east)  to ["Ping per waypoint"] ([yshift=3mm] sc.west) ;
+  \draw [->] ([yshift=-3mm] sc.west) to ["Next Waypoint"] ([yshift=-3mm] sp.east);
+  \end{tikzpicture}
+  \caption{Proposed Drone-Controller Interaction.}
+  % \label{fig:proposed_drone_controller_interaction}
+  \end{figure}
+
 \subsubsection{Controllers}
 
 \subsection{Global Layer}
